# zero2prod

./: .env  Cargo.toml  configuration.yaml
migrations/: 20250411183528_create_subsription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
