[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx-cli = { version = "0.8.3", features = [
  "native-tls",
  "postgres",
  "rustls",
] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8.3"
features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "0.12.15"
